# rank2plan

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml
documents/: theory.bib  theory.tex
rank2plan/: __init__.py  lp_model.py  model.py  types.py
rank2plan/lp_models/: __init__.py  lp_model.py  lp_underlying.py  objective_values.py  primal_lp_model.py  smoothing_hinge_loss.py  utils.py
rank2plan/lp_models/constraint_column_generation/: __init__.py  constraint_column_model.py  constraint_model.py  smoothing_hinge_loss.py  utils.py
rank2plan/lp_models/constraint_generation/: __init__.py  constraint_model.py
rank2plan/lp_models/initialisation/: smoothing_hinge_loss.py
rank2plan/lp_models/regularisers/: __init__.py  constant_regulariser.py  dynamic_regulariser.py  regulariser.py
rank2plan/lp_models/warm_starting/: smoothing_hinge_loss.py
rank2plan/metrics/: __init__.py  kendall_tau.py
tests/: conftest.py  test_constraint_column_generation.py  test_constraint_generation.py  test_primal_lp_model.py
