[tool.poetry]
name = "rank2plan"
version = "0.1.0"
description = ""
authors = ["Ryan Wang <ryanxiaowang2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.22.0"
pulp = "2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
