[tool.poetry]
name = "rank2plan"
version = "0.1.1"
description = ""
authors = ["Ryan Wang <ryanxiaowang2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# 3.11 is probably actually supported, but I don't intend to test it for now
python = "^3.8,<3.11"
numpy = "1.22.0"
pulp = "2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
